cards made -- still need to be designed

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -12,6 +12,69 @@
     <div class="jumbotron">
       <h1>Hello from the Bootstrap project starter</h1>
       <p class="lead">Start your Bootstrap projects easily with this simple template.</p>
+
+
+
+
+
+
+
+      <!-- RECEPIES CARDS ---- PETER STARTS HERE -->
+      <div class="container-fluid">
+
+        <div class="row">
+          <div class="col">
+              <img class="card-img-top mw-40" src="https://ms2.ostium.cz/instance/web-recepty/j4rpVSsb/h389w574t.jpg" alt="Card image cap">
+          </div>
+          <div class="col">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+          <div class="col">
+              <img class="card-img-top mw-40"           
+              src="https://www.makro.cz/~/media/CZ-Makro/image/recipes/hero-image/ohnivy-kure/hovezi-gulas-se-spekovymi-knedliky.jpg" 
+                alt="Card image cap">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+              <img class="card-img-top mw-40" src="https://i.pinimg.com/474x/13/42/bb/1342bbc23d81eadf53ef39ece000e540--jello-shot-recipes-jello-shots.jpg" alt="Card image cap">
+          </div>
+          <div class="col">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+
+        <!-- <div class="card w-100 flex-md-row">
+          <img class="card-img-top mw-40" src="https://ms2.ostium.cz/instance/web-recepty/j4rpVSsb/h389w574t.jpg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+
+        <div class="card w-100 flex-md-row-reverse">
+          <img class="card-img-top mw-40"           
+                src="https://www.makro.cz/~/media/CZ-Makro/image/recipes/hero-image/ohnivy-kure/hovezi-gulas-se-spekovymi-knedliky.jpg" 
+                alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+
+        <div class="card w-100 flex-md-row">
+          <img class="card-img-top mw-40" src="..." alt="Card image cap">
+          https://i.pinimg.com/474x/13/42/bb/1342bbc23d81eadf53ef39ece000e540--jello-shot-recipes-jello-shots.jpg
+          <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div> -->
+
+      </div>
+
     </div>
   </div>
   
