--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -8,18 +8,28 @@
   <title>Gulp and SASS Demo</title>
 </head>
 <body>
-  <div class="container">
-
-    <div class="jumbotron">
-      <h1>Hello from the Bootstrap project starter</h1>
-      <p class="lead">Start your Bootstrap projects easily with this simple template.</p>
-    </div>
-  
-
-
-
-
-
+    <div class="main-container">
+        <div class="container">
+        <div class="jumbotron jumbotron-fluid">
+            <h1 class="display-3">Cooking with love</h1>
+            <nav class="navbar navbar-dark bg-dark">
+                <ul class="nav">
+                    <li class="nav-item">
+                      <a class="nav-link active" href="#">Active</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    </li>
+                  </ul>
+         </nav>
+        </div>
+        </div>
 
     <!-- RECEPIES CARDS ---- PETER STARTS HERE -->
     <div class="container-fluid">
