Cards redisgner -- still need better design tough

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -9,73 +9,70 @@
 </head>
 <body>
   <div class="container">
+
     <div class="jumbotron">
       <h1>Hello from the Bootstrap project starter</h1>
       <p class="lead">Start your Bootstrap projects easily with this simple template.</p>
+    </div>
+  
 
 
 
 
 
 
+    <!-- RECEPIES CARDS ---- PETER STARTS HERE -->
+    <div class="container-fluid">
 
-      <!-- RECEPIES CARDS ---- PETER STARTS HERE -->
-      <div class="container-fluid">
-
-        <div class="row">
-          <div class="col">
-              <img class="card-img-top mw-40" src="https://ms2.ostium.cz/instance/web-recepty/j4rpVSsb/h389w574t.jpg" alt="Card image cap">
-          </div>
-          <div class="col">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          </div>
-          <div class="col">
-              <img class="card-img-top mw-40"           
-              src="https://www.makro.cz/~/media/CZ-Makro/image/recipes/hero-image/ohnivy-kure/hovezi-gulas-se-spekovymi-knedliky.jpg" 
-                alt="Card image cap">
-          </div>
-        </div>
-        <div class="row">
-          <div class="col">
-              <img class="card-img-top mw-40" src="https://i.pinimg.com/474x/13/42/bb/1342bbc23d81eadf53ef39ece000e540--jello-shot-recipes-jello-shots.jpg" alt="Card image cap">
-          </div>
-          <div class="col">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          </div>
-        </div>
-
-        <!-- <div class="card w-100 flex-md-row">
+      <div class="row"> <!--FIRST ROW--> 
+        <div class="col m-3"> <!-- FIRST IMAGE-->
           <img class="card-img-top mw-40" src="https://ms2.ostium.cz/instance/web-recepty/j4rpVSsb/h389w574t.jpg" alt="Card image cap">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          </div>
         </div>
+        <div class="col m-3"> <!-- FIRST TEXT-->
+          <h2>Sushi</h2>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
 
-        <div class="card w-100 flex-md-row-reverse">
-          <img class="card-img-top mw-40"           
-                src="https://www.makro.cz/~/media/CZ-Makro/image/recipes/hero-image/ohnivy-kure/hovezi-gulas-se-spekovymi-knedliky.jpg" 
+
+      <div class="row"> <!-- SECOND ROW-->
+        <div class="col m-3">
+          <h2>Gulas</h2> <!-- SECOND TEXT-->
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+        <div class="col p-0 m-3"> <!-- SECOND IMAGE-->
+          <img class="card-img-top mw-40 h-100"           
+                src="https://recepty.cuketka.cz/media/recipe/main_imgs/jeleni_gulas_2048_55o.jpg" 
                 alt="Card image cap">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          </div>
         </div>
+      </div>
 
-        <div class="card w-100 flex-md-row">
-          <img class="card-img-top mw-40" src="..." alt="Card image cap">
-          https://i.pinimg.com/474x/13/42/bb/1342bbc23d81eadf53ef39ece000e540--jello-shot-recipes-jello-shots.jpg
-          <div class="card-body">
+      <div class="row">  <!-- THIRD ROW-->
+        <div class="col m-3"> <!-- THIRD IMAGE-->
+          <img class="card-img-top mw-40"     
+                src="https://i.pinimg.com/474x/13/42/bb/1342bbc23d81eadf53ef39ece000e540--jello-shot-recipes-jello-shots.jpg" alt="Card image cap">
+        </div>
+        <div class="col m-3"> <!-- THIRD TEXT-->
+            <h2>Relax</h2>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          </div>
-        </div> -->
+        </div>
+      </div>
 
+
+      <div class="row"> <!-- FOURTH ROW-->
+        <div class="col m-3">
+          <h2>Gulas</h2> <!-- FOURTH TEXT-->
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+        <div class="col m-3"> <!-- FOURTH IMAGE-->
+          <img class="card-img-top mw-40 h-100"           
+                src="https://assets.kraftfoods.com/recipe_images/opendeploy/118489_640x428.jpg" 
+                alt="Card image cap">
+        </div>
       </div>
 
     </div>
+
   </div>
   
   <script 
