--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <div class="main-container">
-        <div class="container">
-        <div class="jumbotron jumbotron-fluid">
-            <h1 class="display-3">Cooking with love</h1>
-            <nav class="navbar navbar-dark bg-dark">
+      
+        <div class="my-container jumbotron jumbotron-fluid container d-flex flex-wrap pb-0">
+            <h1 class="display-3 ">Cooking with love</h1>
+            <nav class="navbar navbar-dark bg-dark align-self-end w-100">
                 <ul class="nav">
                     <li class="nav-item">
                       <a class="nav-link active" href="#">Active</a>
@@ -27,16 +27,35 @@
                       <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
                     </li>
                   </ul>
-         </nav>
+            </nav>
         </div>
-        </div>
+        
 
     <!-- RECEPIES CARDS ---- PETER STARTS HERE -->
-    <div class="container-fluid">
+    <div class="container">
+
+        <div class="row text-center d-flex ">
+            <div class="col">
+              <div class="circle1 w-90 mx-auto"></div>
+              <h2>Chicken recipes</h2>
+            </div>
+            <div class="col">
+                <div class="circle2"></div>
+                <h2>Pasta recipes</h2>
+            </div>
+            <div class="col">
+                <div class="circle3"></div>
+                <h2>Salad recipes</h2>
+            </div> 
+        </div>
+
+
+
+
 
       <div class="row"> <!--FIRST ROW--> 
         <div class="col m-3"> <!-- FIRST IMAGE-->
-          <img class="card-img-top mw-40" src="https://ms2.ostium.cz/instance/web-recepty/j4rpVSsb/h389w574t.jpg" alt="Card image cap">
+          <img class="card-img-top mw-40" src="img/recipe01.jpg" alt="Card image cap">
         </div>
         <div class="col m-3"> <!-- FIRST TEXT-->
           <h2>Sushi</h2>
@@ -52,7 +71,7 @@
         </div>
         <div class="col p-0 m-3"> <!-- SECOND IMAGE-->
           <img class="card-img-top mw-40 h-100"           
-                src="https://recepty.cuketka.cz/media/recipe/main_imgs/jeleni_gulas_2048_55o.jpg" 
+                src="img/recipe01.jpg" 
                 alt="Card image cap">
         </div>
       </div>
@@ -60,7 +79,7 @@
       <div class="row">  <!-- THIRD ROW-->
         <div class="col m-3"> <!-- THIRD IMAGE-->
           <img class="card-img-top mw-40"     
-                src="https://i.pinimg.com/474x/13/42/bb/1342bbc23d81eadf53ef39ece000e540--jello-shot-recipes-jello-shots.jpg" alt="Card image cap">
+                src="img/recipe01.jpg" alt="Card image cap">
         </div>
         <div class="col m-3"> <!-- THIRD TEXT-->
             <h2>Relax</h2>
@@ -76,7 +95,7 @@
         </div>
         <div class="col m-3"> <!-- FOURTH IMAGE-->
           <img class="card-img-top mw-40 h-100"           
-                src="https://assets.kraftfoods.com/recipe_images/opendeploy/118489_640x428.jpg" 
+                src="img/recipe01.jpg" 
                 alt="Card image cap">
         </div>
       </div>
